css fix for nameplate letter spacing

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ body {
     top: 15%;
     text-align: center;
     font-family: "Garamond";
-    letter-spacing: 0.2em;
+    letter-spacing: 0.04em;
     padding: 20px;
     font-size: 48px;
     color: white;
